Fixed layout breaks
layout breaks originated from back-end problems

--- a/styles/scss/header.scss
+++ b/styles/scss/header.scss
@@ -252,6 +252,7 @@
                         .cart-summary--nameText {
                           font-size: 0.8125rem;
                           color: $c-text;
+                          line-break: anywhere;
 
                           @include line-clamp(2);
 
