--- a/styles/scss/products.scss
+++ b/styles/scss/products.scss
@@ -493,7 +493,9 @@
     .product--pagination {
       position: relative;
       display: block;
+      max-width: 100vw;
       margin: 1rem auto;
+      overflow: hidden;
 
       .product--paginationNav {
         display: flex;
